--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -2,6 +2,10 @@
     "root": true,
     "extends": "next",
     "rules": {
+        "linebreak-style": [
+            "error",
+            "windows"
+        ],
         "no-unused-vars": [
             "error",
             {
