--- a/package.json
+++ b/package.json
@@ -16,10 +16,15 @@
     "@chakra-ui/react": "^1.7.4",
     "@emotion/react": "^11.7.1",
     "@emotion/styled": "^11.6.0",
+    "@fontsource/fira-sans": "^4.5.0",
+    "date-fns": "^2.28.0",
     "framer-motion": "^5.6.0",
+    "gray-matter": "^4.0.3",
     "next": "^12.0.8",
     "react": "^17.0.2",
-    "react-dom": "^17.0.2"
+    "react-dom": "^17.0.2",
+    "remark": "^14.0.2",
+    "remark-html": "^15.0.1"
   },
   "devDependencies": {
     "eslint": "^8.7.0",
