--- a/package.json
+++ b/package.json
@@ -17,6 +17,8 @@
     "@emotion/react": "^11.7.1",
     "@emotion/styled": "^11.6.0",
     "@fontsource/fira-sans": "^4.5.0",
+    "@mdx-js/loader": "^1.6.22",
+    "@next/mdx": "^12.0.8",
     "date-fns": "^2.28.0",
     "framer-motion": "^5.6.0",
     "gray-matter": "^4.0.3",
