--- a/package.json
+++ b/package.json
@@ -17,16 +17,18 @@
     "@emotion/react": "^11.7.1",
     "@emotion/styled": "^11.6.0",
     "@fontsource/fira-sans": "^4.5.0",
-    "@mdx-js/loader": "^1.6.22",
     "@next/mdx": "^12.0.8",
     "date-fns": "^2.28.0",
     "framer-motion": "^5.6.0",
     "gray-matter": "^4.0.3",
     "next": "^12.0.8",
+    "querystring": "^0.2.1",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
+    "react-icons": "^4.3.1",
     "remark": "^14.0.2",
-    "remark-html": "^15.0.1"
+    "remark-html": "^15.0.1",
+    "swr": "^1.2.1"
   },
   "devDependencies": {
     "eslint": "^8.7.0",
