--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
   "author": "Alexander Dauncey",
   "license": "MIT",
   "dependencies": {
+    "@catppuccin/palette": "^0.1.8",
     "@chakra-ui/icons": "^1.1.1",
     "@chakra-ui/react": "^1.7.4",
     "@emotion/react": "^11.7.1",
